--- a/src/components/partners/partners.css
+++ b/src/components/partners/partners.css
@@ -162,7 +162,7 @@
 
 .service-card:hover .service-icon {
   color: #ff3a3a !important;
-  transform: rotateY(360deg) !important;
+  transform: scale(1.05) !important;
   transition: all 0.3s ease !important;
 }
 
@@ -254,7 +254,7 @@
 
 .benefit-card:hover .benefit-icon {
   color: #ff3a3a !important;
-  transform: rotateY(360deg) !important;
+  transform: scale(1.05) !important;
   transition: all 0.3s ease !important;
 }
 
